Fix to relative links in the footer & to padding-inline-start issue with menu on mobile

--- a/main.css
+++ b/main.css
@@ -465,6 +465,7 @@ a:active:not(.main-article__anchor) {
     list-style: none;
     text-align: center;
     width: 100%;
+    padding-inline-start: 0px;
 }
 
 #nav-bar__list,
